force-app/main/default/objects/Knowledge__kav/fields/Approval_Process_Slack_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Process_Slack_Status__c</fullName>
    <label>Approval Process Slack Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VP Approval 1</fullName>
            </value>
            <value>
                <fullName>Corporate Communication Team</fullName>
            </value>
            <value>
                <fullName>Legal Team Approval</fullName>
            </value>
            <value>
                <fullName>Post Legal Author Review</fullName>
            </value>
            <value>
                <fullName>VP Final Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>