force-app/main/default/objects/Knowledge__kav/fields/Article_Link__c.field-meta.xml
<CustomField>
    <fullName>Article_Link__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/articles/Knowledge/&quot;&amp;UrlName,&quot;Click Here&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Article Link</label>
    <type>Text</type>
</CustomField>