force-app/main/default/objects/Knowledge__kav/fields/Body_Content__c.field-meta.xml
<CustomField>
    <fullName>Body_Content__c</fullName>
    <description>this field is to input the article body</description>
    <label>Body Content</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>