force-app/main/default/objects/Knowledge__kav/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Article Body goes in this field</description>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>