force-app/main/default/objects/Knowledge__kav/fields/Google_Doc__c.field-meta.xml
<CustomField>
    <fullName>Google_Doc__c</fullName>
    <label>Google Doc</label>
    <type>Url</type>
</CustomField>