force-app/main/default/objects/Knowledge__kav/fields/Last_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Approved_Date__c</fullName>
    <label>Last Approved Date</label>
    <type>Date</type>
</CustomField>