force-app/main/default/objects/Knowledge__kav/fields/Pillar__c.field-meta.xml
<CustomField>
    <fullName>Pillar__c</fullName>
    <label>Pillar</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CRT</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Liquidity</fullName>
            </value>
            <value>
                <fullName>Unrelated to a pillar</fullName>
            </value>
            <value>
                <fullName>Ecosystem</fullName>
                <isActive>false</isActive>
                <label>Ecosystem</label>
            </value>
            <value>
                <fullName>Platform Distribution</fullName>
                <isActive>false</isActive>
                <label>Platform Distribution</label>
            </value>
            <value>
                <fullName>Stablecoins</fullName>
                <isActive>false</isActive>
                <label>Stablecoins</label>
            </value>
            <value>
                <fullName>Web3 Services</fullName>
                <isActive>false</isActive>
                <label>Web3 Services</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>