force-app/main/default/objects/Knowledge__kav/fields/Steps__c.field-meta.xml
<CustomField>
    <fullName>Steps__c</fullName>
    <description>Steps the reader needs to take to accomplish the task</description>
    <label>Steps</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>