force-app/main/default/objects/Knowledge__kav/fields/Sub_Pillar__c.field-meta.xml
<CustomField>
    <fullName>Sub_Pillar__c</fullName>
    <description>Asana - https://app.asana.com/0/1203888552965975/1206312554306326/f</description>
    <label>Sub-Pillar</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Pillar__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compliance Services</fullName>
            </value>
            <value>
                <fullName>Deprecated Product</fullName>
            </value>
            <value>
                <fullName>Developer Experience</fullName>
            </value>
            <value>
                <fullName>Ecosystem Wallets</fullName>
            </value>
            <value>
                <fullName>Liquidity Distribution</fullName>
            </value>
            <value>
                <fullName>Liquidity Growth</fullName>
            </value>
            <value>
                <fullName>Liquidity Supply</fullName>
            </value>
            <value>
                <fullName>Onboarding &amp; Customer Lifecycle</fullName>
            </value>
            <value>
                <fullName>Programmable Wallets</fullName>
            </value>
            <value>
                <fullName>Stablecoin Protocols</fullName>
            </value>
            <value>
                <fullName>Unrelated to a Pillar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>