force-app/main/default/objects/Knowledge__kav/fields/Suggested_Article__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Article__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suggested Article</label>
    <type>Checkbox</type>
</CustomField>