force-app/main/default/objects/Knowledge__kav/recordTypes/High_Touch_PR.recordType-meta.xml
<RecordType>
    <fullName>High_Touch_PR</fullName>
    <active>true</active>
    <description>This record type will be use for all High Touch PR articles only</description>
    <label>High Touch PR</label>
</RecordType>