force-app/main/default/objects/Knowledge__kav/recordTypes/Standard_Content.recordType-meta.xml
<RecordType>
    <fullName>Standard_Content</fullName>
    <active>true</active>
    <description>This record type will be use for all standard content articles</description>
    <label>Standard Content</label>
</RecordType>