force-app/main/default/objects/Knowledge__kav/listViews/All_Articles_Pending_Publishing.listView-meta.xml
<ListView>
    <fullName>All_Articles_Pending_Publishing</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>Article_Status__c</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>IS_CHANNEL_APP</columns>
    <columns>IS_CHANNEL_PKB</columns>
    <columns>IS_CHANNEL_CSP</columns>
    <columns>IS_CHANNEL_PRM</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>VALIDATION_STATUS_ENUM</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <filters>
        <field>Article_Status__c</field>
        <operation>equals</operation>
        <value>Ready to Publish</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Knowledge__kav.High_Touch_PR,Knowledge__kav.Standard_Content</value>
    </filters>
    <label>2 - All Articles Pending Publishing</label>
</ListView>