force-app/main/default/objects/Knowledge__kav/listViews/High_Touch_PR_Content_Articles.listView-meta.xml
<ListView>
    <fullName>High_Touch_PR_Content_Articles</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>Google_Doc__c</columns>
    <columns>Article_Status__c</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>Last_Approved_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Knowledge__kav.High_Touch_PR</value>
    </filters>
    <label>7 - High Touch PR Content Articles</label>
</ListView>