force-app/main/default/objects/Knowledge__kav/listViews/Pending_Approval_Articles.listView-meta.xml
<ListView>
    <fullName>Pending_Approval_Articles</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>ASSIGNEDTO_USER</columns>
    <columns>ASSIGNEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>VALIDATION_STATUS_ENUM</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <filters>
        <field>Article_Status__c</field>
        <operation>equals</operation>
        <value>New,In Progress</value>
    </filters>
    <label>1 - Pending Approval Articles</label>
</ListView>