force-app/main/default/objects/Knowledge__kav/listViews/Rejected_Articles.listView-meta.xml
<ListView>
    <fullName>Rejected_Articles</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>VALIDATION_STATUS_ENUM</field>
        <operation>equals</operation>
        <value>Rejected</value>
    </filters>
    <label>4 - Rejected Articles</label>
</ListView>