force-app/main/default/objects/Knowledge__kav/listViews/Standard_Content_Articles.listView-meta.xml
<ListView>
    <fullName>Standard_Content_Articles</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>Article_Status__c</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>Last_Approved_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>6 - Standard Content Articles</label>
</ListView>